fix visibilityMatrix

--- a/src/App.scss
+++ b/src/App.scss
@@ -282,3 +282,9 @@ table {
 .error {
     color: red;
 }
+
+.box {
+    margin: 10px;
+    display: inline;
+    float: left;
+}
